add fallback image & example markup

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "scripts": {
     "clean": "rimraf bundle",
-    "prebuild": "npm run clean",
+    "prebuild": "npm run clean && npm run assets",
+    "assets": "mkdir bundle && cp -R assets bundle/ && cp index.html bundle/",
     "build": "webpack --progress",
     "build:watch": "npm run build -- --watch",
     "lint:js": "eslint .",
@@ -26,7 +27,7 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.1",
     "eslint": "^3.10.1",
     "eslint-config-barebones": "^0.1.3",
     "exports-loader": "^0.6.3",
@@ -35,11 +36,11 @@
     "glslify-loader": "^1.0.2",
     "html-webpack-plugin": "^2.24.1",
     "http-server": "^0.9.0",
-    "imports-loader": "^0.6.5",
+    "imports-loader": "^0.7.0",
     "postcss-cssnext": "^2.8.0",
-    "postcss-import": "^8.2.0",
+    "postcss-import": "^9.1.0",
     "postcss-loader": "^1.1.1",
-    "postcss-reporter": "^2.0.0",
+    "postcss-reporter": "^3.0.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
